kubernetes/gr-foundry/manifests/workbench/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: workbench
spec:
  type: ExternalName
  externalName: postgres-prod.postgres-prod.svc.cluster.local
