kubernetes/gr-foundry/manifests/workbench/workbench.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workbench
  namespace: workbench
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workbench
  template:
    metadata:
      labels:
        app: workbench
    spec:
      containers:
        - name: workbench
          image: ghcr.io/gaucho-racing/workbench-server:latest
          ports:
            - containerPort: 9999
              name: http
          startupProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
              ephemeral-storage: 5Gi
          volumeMounts:
            - name: temporary-exports
              mountPath: /tmp
      volumes:
        - name: temporary-exports
          emptyDir:
            sizeLimit: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: workbench
  namespace: workbench
spec:
  selector:
    app: workbench
  ports:
    - name: http
      port: 9999
      targetPort: http
